--- a/public/home.html
+++ b/public/home.html
@@ -1,10 +1,6 @@
+<div class="img-responsive">
+    <img src="./images/testime.jpg" alt="Lights" style="background-position: center;background-size: cover;">
+    <div class="caption">
+    </div>
 
-<div id = "imgtag">
-<div id="tagline">
-  <div>
-    <h4>ONLINE eduBASE SYSTEM</h4>
-    <p>A Website Where You Can Check Your Potential.</p>
-  </div>
-</div>
-</div>
 </div>
