--- a/public/teacherFront/home.html
+++ b/public/teacherFront/home.html
@@ -1,1 +1,49 @@
- <h1>teacher home page</h1>  
+<style>
+    .head{
+ background-color: tomato;
+ text-align: center;
+ width: 80%;
+ margin-left: 10%;
+ border-radius: 5px;
+ 
+     }
+ 
+     .instructions{
+         width:80%;
+         height: 300px;
+         border:2px solid black;
+         border-radius: 5px;
+         margin-left: 10%;
+         background-color: tomato;
+     }
+     .read{
+         margin-top: 10px;
+         margin-left: 30px;
+         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+         line-height: 20px;
+         letter-spacing: 2px;
+         word-spacing: 5px;
+         font-style: italic;
+         font-size: 15px;
+     }
+     .centre{
+         text-align: center;
+         font-weight: bold;
+     }
+ </style>
+ <div>
+     
+     <h1 class="head">Instructions</h1>
+     <div class = "instructions">
+         <p class="read centre">Read All Instructions Carefully.</p>
+         <p class="read">Hello Teacher ! You can do lot of things.</p>
+         <p class="read">1. You can change your password by selecting "forget password".</p>
+         <p class="read">2. You can Add Test Details And TestQuestions To The Test.</p>
+         <p class="read">3. In Test Details You Can Add The Name Of Test And Timing For Test.</p>
+         <p class="read">4. Click On The "Add Questions" And Select The Particular Test Shown On The Page.</p>
+         <p class="read">5. After Clicking On Particular Test Add Questions And Answers For The Test.</p>
+         <p class="read">6. You Can Also Add The Positive Marks For Each Questions.</p>
+         <p class="read">7. You Can Also Add The Negative Marks For Each Questions.</p>
+         
+     </div>
+ </div> 
