--- a/public/teacherFront/question.html
+++ b/public/teacherFront/question.html
@@ -1,67 +1,80 @@
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 <link rel="stylesheet" href="../css/tests.css">
-<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:24%">
-    <h3 class="w3-bar-item">Tests</h3>
-    <div class="tests">
-        <table>
-            <tr ng-repeat="key in data">
-                <td><button ng-click="printQuestions(key.testname)">{{key.testname}}</button></td>
+
+    <div class="col-sm-2" style="border-right: 1px solid gray">
+        <h3>Test List</h3>
+        <ul ng-repeat="key in data" style="list-style-type: none">
+                <li ng-click="printQuestions(key.testname,key.testid)"
+                style="cursor: pointer;padding:5px;border:1px solid gray;border-radius: 5px;text-align: center"
+                >{{key.testname}}</li>
+        </ul>
+</div>
+<div class='col-sm-10'>
+   
+<h3>{{chooseTest}}</h3>
+<div ng-show="questiondiv">
+<div class=" questions">
+         <span>Test Name:{{testname}}</span>
+        <form ng-submit="saveQuestion()">
+            <table>
+                <tr>
+            <td><label for="">Questions:</label></td>
+            <td><textarea  cols="130" rows="3" class="form-control"  ng-model="form.question" placeholder="Enter Question"></textarea></td>
             </tr>
-        </table>
-    </div>
-  </div>
-  <center><h1>{{chooseTest}}</h1></center>
-  <div ng-show="questiondiv">
-<div style="float:right;width:75%;">
-        <legend>addQuestions</legend>
-       <center> <h1>Test Name:{{testname}}</h1></center>
-        <fieldset>
-            <form ng-submit="saveQuestion()">
-        <table>         
-    <tr>
-        <td><label for="">Question:</label></td>
-        <td><input type="text" ng-model="form.question" placeholder="Type question"></td>
-    </tr>
-    <tr>
-        <td><label for="">Option1</label></td>
-        <td><input type="text" ng-model="form.optn1"></td>
-    </tr>
-    <tr>
-        <td><label for="">Option2</label></td>
-        <td><input type="text" ng-model="form.optn2"></td>
-    </tr>
-    <tr> 
-        <td><label for="">Option3</label></td>
-        <td><input type="text" ng-model="form.optn3"></td>
-    </tr>
-    <tr>
-        <td><label for="">Option4</label></td>
-        <td><input type="text" ng-model="form.optn4"></td>
-    </tr>
-    <tr>
-        <td><label for="">Answer</label></td>
-        <td><input type="text" ng-model="form.ans" placeholder="Type Answer"></td>
-    </tr>
-    <tr>
-        <td><label for="">Positive Marks:</label></td>
-        <td><input type="text" ng-model="form.positivemark" value="0"></td>
-    </tr>
-    <tr>
-        <td><label for="">Negative Mark:</label></td>
-        <td><input type="text" ng-model="form.negativemark" value="0"></td>
-    </tr>
-        </table>
-        <button type="reset">Reset</button>
-        <button type="submit">Save</button>
+            <tr>
+                <td><label for="">Option 1:</label></td>
+                <td><input type="text" class="form-control"  ng-model="form.optn1" placeholder="Enter Option 1"></td>
+            </tr>
+            <tr>
+                    <td><label for="">Option 2:</label></td>
+                    <td><input type="text" class="form-control"  ng-model="form.optn2" placeholder="Enter Option 2"></td>
+                </tr>
+                <tr>
+                        <td><label for="">Option 3:</label></td>
+                        <td><input type="text" class="form-control"  ng-model="form.optn3" placeholder="Enter Option 3"></td>
+                    </tr>
+                    <tr>
+                            <td><label for="">Option 4:</label></td>
+                            <td><input type="text" class="form-control" ng-model="form.optn4" placeholder="Enter Option 4"></td>
+                        </tr>
+                        <tr>
+                                <td><label for="">Answer:</label></td>
+                                <td><select class="form-control" ng-model="form.ans" ng-required>
+                                          <option >A</option>
+                                          <option>B</option>
+                                          <option>C</option>
+                                          <option>D</option>
+                                        </select>
+                                    </td>
+                            </tr>
+                        <tr>
+                                <td><label for="">Positive Marks:</label></td>
+                                <td><input type="text" class="form-control"  ng-model="form.positivemark" placeholder="Enter Positive Marks" value="0"></td>
+                            </tr>
+                            <tr>
+                                    <td><label for="">Negative Marks:</label></td>
+                                    <td><input type="text" class="form-control"  ng-model="form.negativemark" placeholder="Enter negative Mark" value="0"><br></td>
+                            </tr>
+                            <tr>
+                            <td><label for="">Solutions:</label></td>
+                            <td><textarea  cols="130" rows="3" class="form-control"  ng-model="form.solution" placeholder="Enter Solution"><br></textarea></td>
+                            </tr>
+                            <tr>
+                                <td> <button type="submit" class="btn btn-default">Submit</button></td>
+                                <td><button type="reset" class="btn btn-default">Reset</button></td>
+                            </tr>
+              </table><br><br>
+
         </form>
-    </fieldset>
-    </div>
-    <div style="float:right;width:75%;">
-        <legend>Questions</legend>
-        <fieldset>
-          <table border="1">
+      </div>
+    </div>  
+</div>
+
+    <div >
+
+          <table ng-show="questiondiv" class="table table-bordered">
             <thead>
-                <td>Question No.</td>
+                <td style="padding-left: 20px;">Question No.</td>
                 <td>Question</td>
                 <td>Option1</td>
                 <td>Option2</td>
@@ -74,7 +87,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="question in questiondata">
-                    <td>{{question.queno}}</td>
+                    <td>{{$index+1}}</td>
                     <td ng-model="que">{{question.question}}</td>
                     <td ng-model="optn1">{{question.optn1}}</td>
                     <td ng-model="optn2">{{question.optn2}}</td>
@@ -83,17 +96,14 @@
                     <td ng-model="ans">{{question.ans}}</td>
                     <td ng-model="pstvmark">{{question.positivemark}}</td>
                     <td ng-model="ngtivemark">{{question.negativemark}}</td>
-                    <td><button type="button" class="btn btn-default btn-sm" ng-click="edit(question.queno)">
+                    <td><button type="button" class="btn btn-default btn-sm button-edit" ng-click="edit(question.queid)">
                         <span class="glyphicon glyphicon-edit" >
                         </span> Edit
                           </button></td>
-                    <td><button type="button" class="btn btn-default btn-sm" ng-click="delete(question.queno)">
+                    <td><button type="button" class="btn btn-default btn-sm button-trash" ng-click="delete(question.queid)">
                         <span class="glyphicon glyphicon-trash"></span> Trash 
                           </button></td>
                 </tr>
             </tbody>
           </table>
-        </fieldset>
-    </div>
-</div>
-</div>
+    </div>   
