--- a/public/about.html
+++ b/public/about.html
@@ -85,32 +85,7 @@
 
 
 
-                                    <div class="col-lg-3 col-md-3 col-sm-6  text-center doc-item">
-				                        <div class="common-doctor animated fadeInUp clearfix ae-animation-fadeInUp">
-
-					                        <ul class="list-inline social-lists animate">
-												<li><a href="prashantseemanoj@outlook.com"><i class="fa fa-skype"></i></a></li>
-												<li><a href="https://twitter.com/prashantrai117"><i class="fa fa-twitter"></i></a></li>
-												<li><a href="https://www.facebook.com/prashant.rai.3597789"><i class="fa fa-facebook"></i></a></li>
-											</ul>
-
-	                                        <figure>
-								                    <img width="670" height="500" src="images/srk.jpg" class="doc-img animate attachment-gallery-post-single wp-post-image" alt="doctor-2"> 
-								            </figure>
-
-						                    <div class="text-content">
-						                        <h5>Shahrukh Khan</h5>
-						                        <!-- <div class="for-border"></div> -->
-                                                <h5><small>Web Developer</small></h5>
-                                                <p>I am a student of B-Tech final year
-                                                        Computer Science and Engineering
-                                                        Department.I have a knowledge of 
-                                                        various Languages Like JAVA , ANGULARJS
-                                                         , NODEJS , EXPRESSJS , MONGODB , MYSQL 
-                                                         , HTML , CSS , BOOTSTRAP , JAVASCRIPT </p>
-						                    </div>
-						                </div>
-						            </div>
+                                    
 
 
 
@@ -127,11 +102,11 @@
 											</ul>
 
 	                                        <figure>
-								                    <img width="670" height="500" src="images/srk.jpg" class="doc-img animate attachment-gallery-post-single wp-post-image" alt="doctor-2"> 
+								                    <img width="670" height="500" src="images/udd.jpg" class="doc-img animate attachment-gallery-post-single wp-post-image" alt="doctor-2"> 
 								            </figure>
 
 						                    <div class="text-content">
-						                        <h5>Shahrukh Khan</h5>
+						                        <h5>Uddeshya Kumar</h5>
 						                        <!-- <div class="for-border"></div> -->
                                                 <h5><small>Web Developer</small></h5>
                                                 <p>I am a student of B-Tech final year
@@ -144,7 +119,32 @@
 						                </div>
 						            </div>
 
-
+									<div class="col-lg-3 col-md-3 col-sm-6  text-center doc-item">
+											<div class="common-doctor animated fadeInUp clearfix ae-animation-fadeInUp">
+	
+												<ul class="list-inline social-lists animate">
+													<li><a href="prashantseemanoj@outlook.com"><i class="fa fa-skype"></i></a></li>
+													<li><a href="https://twitter.com/prashantrai117"><i class="fa fa-twitter"></i></a></li>
+													<li><a href="https://www.facebook.com/prashant.rai.3597789"><i class="fa fa-facebook"></i></a></li>
+												</ul>
+	
+												<figure>
+														<img width="670" height="500" src="images/srk.jpg" class="doc-img animate attachment-gallery-post-single wp-post-image" alt="doctor-2"> 
+												</figure>
+	
+												<div class="text-content">
+													<h5>Shahrukh Khan</h5>
+													<!-- <div class="for-border"></div> -->
+													<h5><small>Web Developer</small></h5>
+													<p>I am a student of B-Tech final year
+															Computer Science and Engineering
+															Department.I have a knowledge of 
+															various Languages Like JAVA , ANGULARJS
+															 , NODEJS , EXPRESSJS , MONGODB , MYSQL 
+															 , HTML , CSS , BOOTSTRAP , JAVASCRIPT </p>
+												</div>
+											</div>
+										</div>
 
 
 
