--- a/public/home.html
+++ b/public/home.html
@@ -1,6 +1,7 @@
-<div class="img-responsive">
-    <img src="./images/testime.jpg" alt="Lights" style="background-position: center;background-size: cover;">
-    <div class="caption">
-    </div>
+<div class="col-sm-3" style="padding-top: 7%">
 
+        <span style="margin-top: 100px;font-size: 300%;text-shadow: 2px cadetblue;color: blue">A website where you can check your potential</span>
+</div>
+<div class="col-sm-9" style="padding-top: 10px">
+        <img src="./images/testime.jpg" alt="Lights" style="float:right;background-position: center;height:363px;width:800px;background-size: cover;">
 </div>
